Fix z-index of header

--- a/css/index.css
+++ b/css/index.css
@@ -72,7 +72,7 @@ header {
   padding: 0;
   color: #666;
   clip-path: inset(0);
-  z-index: 2;
+  z-index: 3;
 }
 
 header .cover {
